src/scss/component/_dropdown.scss
// select 2 dropdown
@use "../utils"as *;

.f-dropdown {
    --max-scroll: 3;
    position: relative;
    z-index: 1;

    select {
        display: none;
    }

    &.fw-500 .f-dropdown > span > span{
        font-weight: 500;
    }
    &>span {
        cursor: pointer;
        padding: 8px 12px;
        display: flex;
        align-items: center;
        position: relative;
        background: #fff;
        transition: color .2s ease, border-color .2s ease;
        height: 52px;
        border: 1px solid var(--color-border-light);
        @include toRem(font-size, 15);
        @include border-radius(6px);
        border-radius: 4px;
        color: $title;

        >span {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            padding-right: 17px;
            font-family: 'Roboto';
            font-style: normal;
            font-weight: 400;
            line-height: 18px;
        }

        img {
            width: 16px;
            height: 12px;
            margin-right: 5px;
        }

        &:before,
        &:after {
            content: "";
            display: block;
            position: absolute;
            width: 8px;
            height: 1.5px;
            border-radius: 1px;
            top: 50%;
            right: 12px;
            background: #000;
            transition: all 0.3s ease;
        }

        &:before {
            margin-right: 4px;
            transform: scale(0.96, 0.8) rotate(50deg);
        }

        &:after {
            transform: scale(0.96, 0.8) rotate(-50deg);
        }
    }

    ul {
        margin: 0;
        padding: 0;
        list-style: none;
        opacity: 0;
        visibility: hidden;
        position: absolute;
        max-height: calc(var(--max-scroll) * 46px);
        top: 40px;
        left: 0;
        z-index: 51;
        right: 0;
        background: #FFF;
        border: 1px solid #CCC;
        border-radius: 6px;
        overflow-x: hidden;
        overflow-y: auto;
        transform-origin: 0 0;
        transition: opacity 0.2s ease, visibility 0.2s ease,
            transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
        transform: translate(0, 5px);

        li {
            padding: 0;
            margin: 0;
            width: 100%;
            a {
                cursor: pointer;
                display: block;
                padding: 8px 12px;
                color: var(--color-black);
                text-decoration: none;
                outline: none;
                position: relative;
                transition: all .2s ease;
                display: flex;
                align-items: center;

                img {
                    width: 16px;
                    height: 12px;
                    margin-right: 10px;
                }

                span {
                    font-family: "Roboto";
                    font-style: normal;
                    font-weight: 500;
                    font-size: 12px;
                    line-height: 18px;
                }

                &:hover {
                    color: #5C6BC0;
                }
            }

            &.active {
                a {
                    color: var(--color-white) !important;
                    background: var(--color-primary);

                    &:before,
                    &:after {
                        --scale: 0.6;
                        content: "";
                        display: block;
                        width: 10px;
                        height: 2px;
                        position: absolute;
                        right: 12px;
                        top: 50%;
                        opacity: 0;
                        background: #FFF;
                        transition: all 0.2s ease;
                    }

                    &:before {
                        transform: rotate(45deg) scale(var(--scale));
                    }

                    &:after {
                        transform: rotate(-45deg) scale(var(--scale));
                    }


                }
            }

        }
    }

    &.disabled {
        opacity: 0.7;

        >span {
            cursor: not-allowed;
        }
    }

    &.filled {
        &>span {
            color: var(--color-black);
        }
    }

    &.open {
        z-index: 15;

        &>span {
            border-color: #AAA;

            &:before,
            &:after {
                background: var(--color-black);
            }

            &:before {
                transform: scale(0.96, 0.8) rotate(-50deg);
            }

            &:after {
                transform: scale(0.96, 0.8) rotate(50deg);
            }
        }

        ul {
            opacity: 1;
            min-width: 110px;
            visibility: visible;
            transform: translate(0, 12px);
            transition: opacity 0.3s ease, visibility 0.3s ease,
                transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
        }
    }
}




.dropdown-width {
    min-width: 300px;
}


@media only screen and (max-width: 575px) {
    .f-dropdown>span>span {
        padding-right: 9px;
        font-size: 13px;
    }

    .f-dropdown>span:before,
    .f-dropdown>span:after {
        right: 6px;
        width: 6px;
    }
}



@media only screen and (min-width: 1400px) {
    .f-dropdown {

        &>span {
            height: 50px;
            @include toRem(font-size, 16);

        }

    }

}

